<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" >
		

<!-- Mon - Fri buttons -->
        <LinearLayout
         android:id="@+id/entryLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
         
            <TextView
    android:id="@+id/textView_currentDateTime"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/wednesdayTView" />
    
   
    

            <EditText
                android:id="@+id/dateTimeEText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="datetime"
                android:clickable="false" 
        android:cursorVisible="false" 
        android:focusable="false" 
        android:focusableInTouchMode="false" >
            </EditText>
            
            <TextView
    android:id="@+id/diaryEntryTView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/diaryEntryTView" />

            <EditText
                android:id="@+id/diaryEntryEText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/writeDiaryEntryHere"
                android:inputType="textMultiLine"
                android:focusable="true"
                android:clickable="true" 
        		android:cursorVisible="true" 
             	android:focusableInTouchMode="true"
                android:scrollbars="vertical">
                <requestFocus />

            </EditText>
       
   	 	<Button
        android:id="@+id/saveDiaryEntryBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/saveDiaryEntryBtn" />

    	<Button
        android:id="@+id/showDiaryEntriesBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/showDiaryEntriesBtn" />

        </LinearLayout>

        

<!-- Previous, Next & Home buttons -->
<LinearLayout
    android:id="@+id/buttonsLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:orientation="horizontal"
    android:weightSum="3"
     >
    	
    <Button
        android:id="@+id/previousBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/previousBtn"
       	android:onClick="previous_Wed_Click"
         />

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/nextBtn" 
        android:onClick="next_Wed_Click"
         />

    

    <Button
        android:id="@+id/homeBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/homeBtn"
        android:onClick="home_Click"
        />
         
</LinearLayout>




</RelativeLayout>